--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /220
-title: "📨 #220: ..."
+title: "📨 #220: use RFC, Sandpack, Progressive enhancement, Streaming, Storybook, React-Native, Codeflow, Fontaine, Unplugin, Node.js 19, TypeRunner..."
 authors: [slorber]
 date: 10-18-2022
 image: /img/TWIR_POST.png
