--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /220
-title: "📨 #220: ..."
+title: "📨 #220: use RFC, Sandpack, Progressive enhancement, Streaming, Storybook, React-Native, Codeflow, Fontaine, Unplugin, Node.js 19, TypeRunner..."
 authors: [slorber]
 date: 10-18-2022
 image: /img/TWIR_POST.png
@@ -137,7 +137,7 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 **[StackBlitz Codeflow](https://stackblitz.com/codeflow)**
 
-The StackBlitz [WebContainers] technology (https://blog.stackblitz.com/posts/introducing-webcontainers/) allows to run Node.js in the browser via WebAssembly. You can run VS Code, Next.js or Docusaurus directly in your browser, and not via a remote Docker container. Codeflow adds the whole layer of integration with GitHub that makes it easy to open, review or edit a pull-request by running it locally in a secure way: extremely useful for open-source projects.
+The StackBlitz [WebContainers](https://blog.stackblitz.com/posts/introducing-webcontainers/) technology allows to run Node.js in the browser via WebAssembly. You can run VS Code, Next.js or Docusaurus directly in your browser, and not via a remote Docker container. Codeflow adds the whole layer of integration with GitHub that makes it easy to open, review or edit a pull-request by running it locally in a secure way: extremely useful for open-source projects.
 
 They also launched Web Publisher, a simplified editing view for Markdown files (editor, preview, save button). Very handy for contributing to documentation on Git, even for less technical users. There is a real preview of the content, and not the degraded experience of the GitHub Markdown preview. This is an [important need for Docusaurus users](https://twitter.com/ericsimons40/status/1580371754974781440).
 
