--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -145,6 +145,7 @@ They also launched Web Publisher, a simplified editing view for Markdown files (
 
 Permits to avoid layout shifts when loading a custom font. Makes the fallback font the same size as the final font, so that the transition is smooth and does not impact the size of the text containers. Great idea!
 
+- [Node.js 19](https://twitter.com/nodejs/status/1582401871179747329)
 - [Node 18.11](https://nodejs.org/en/blog/release/v18.11.0/): adds a new `--watch` mode and a [few other cool things](https://twitter.com/matteocollina/status/1580911016506163202)
 - [Unplugin - Unified plugin system for Vite, Rollup, Webpack, and more](https://github.com/unjs/unplugin): to create agnostic plugins that work on all bundlers!
 - [CSS - Help pick a syntax for nesting - Survey results](https://developer.chrome.com/blog/help-css-nesting-results/)
