--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/220/index.mdx
@@ -35,7 +35,7 @@ import Support from "../_support.mdx";
 
 [![Sizzy - le navigateur pour les développeurs](/emails/issues/220/sizzy.jpg)](https://sizzy.co/?utm_campaign=newsletter&utm_source=thisweekinreact)
 
-Les professionnels de tous les autres secteurs d'activité disposent d'outils spécialisés, mais que les développeurs Web sont toujours obligés d'utiliser le navigateur que leur grand-mère utilise pour faire ses achats sur Amazon ?
+Les professionnels de tous les autres secteurs d'activité disposent d'outils spécialisés, mais les développeurs Web sont toujours obligés d'utiliser le navigateur que leur grand-mère utilise pour faire ses courses sur Amazon ?
 
 Si vous ouvrez localhost:3000 dans un autre navigateur que Sizzy, vous perdez des heures de votre temps précieux.
 
