--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
@@ -9,6 +9,8 @@ draft: true
 
 Salut à tous !
 
+Next.js conf soon
+
 https://twitter.com/wcandillon/status/1579534710140964864
 
 erreur 220 120
@@ -72,33 +74,26 @@ https://twitter.com/brad_frost/status/1583463259478188033
 
 https://twitter.com/ryanflorence/status/1582835729360572416
 
-[Netlify - Background and Scheduled API Routes for Next.js](https://www.netlify.com/blog/new-background-scheduled-api-routes-nextjs/)
 
-[Microsoft - Extending Next.js support in Azure Static Web Apps](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/extending-next-js-support-in-azure-static-web-apps/ba-p/3627975)
 
-[Persist inputs after a form submit in Remix](https://sergiodxa.com/articles/persist-inputs-after-a-form-submit-in-remix)
-
-[Throwing vs. Returning responses in Remix](https://sergiodxa.com/articles/throwing-vs-returning-responses-in-remix)
-
-[Vitest Preview](https://twitter.com/hung_dev/status/1584491260773289984)
-
-[Make use of `use` in React – a new hook is coming](https://vived.io/new-hook-is-coming-to-react-frontend-weekly-vol-109/)
-
-[ReactPlay](https://reactplay.io/)
-
-[Cache api?](https://github.com/facebook/react/pull/25506)
-
-[Currying Layout Component Patterns in Next.js](https://creativedesignsguru.com/currying-nextjs-layout/)
-
+- 📖 [New beta doc - cloneElement](https://twitter.com/dan_abramov/status/1582814754426433537)
+- 📡 [React Cache API Pull-Request](https://github.com/facebook/react/pull/25506)
+- 📜 [Make use of `use` in React – a new hook is coming](https://vived.io/new-hook-is-coming-to-react-frontend-weekly-vol-109/)
+- 📜 [Throwing vs. Returning responses in Remix](https://sergiodxa.com/articles/throwing-vs-returning-responses-in-remix)
+- [Vitest Preview](https://twitter.com/hung_dev/status/1584491260773289984)
+- 📜 [Lessons learned from moving to Recoil.js](https://kitemaker.co/blog/lessons-learned-from-moving-to-recoil)
+- 📜 [Currying Layout Component Patterns in Next.js](https://creativedesignsguru.com/currying-nextjs-layout/)
+- 📜 [Persist inputs after a form submit in Remix](https://sergiodxa.com/articles/persist-inputs-after-a-form-submit-in-remix)
+- 📜 [Separate API Layers In React Apps](https://profy.dev/article/react-architecture-api-layer)
+- [Netlify - Background and Scheduled API Routes for Next.js](https://www.netlify.com/blog/new-background-scheduled-api-routes-nextjs/)
 - [Cloudflare Pages support for Next.js Edge Runtime](https://twitter.com/GregBrimble/status/1584530048522293250)
-- [Separate API Layers In React Apps](https://profy.dev/article/react-architecture-api-layer)
-- [New beta doc - cloneElement](https://twitter.com/dan_abramov/status/1582814754426433537)
-- [Is the new React use hook a footgun?](https://www.youtube.com/watch?v=ytXM05PVcFU)
-- [New website for Storybook](https://twitter.com/storybookjs/status/1583175829009289216)
-- [React Advanced London 2022 - Day 1](https://www.youtube.com/watch?v=1x7mI_xuVVo)
-- [Lottie vs Rive](https://twitter.com/guidorosso/status/1582086637328031745)
-- [Zustand code in a tweet](https://twitter.com/dai_shi/status/1583082766081531905)
-- [Lessons learned from moving to Recoil.js](https://kitemaker.co/blog/lessons-learned-from-moving-to-recoil)
+- [Microsoft - Extending Next.js support in Azure Static Web Apps](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/extending-next-js-support-in-azure-static-web-apps/ba-p/3627975)
+- 🔗 [New website for Storybook](https://twitter.com/storybookjs/status/1583175829009289216)
+- 🎥 [Is the new React use hook a footgun?](https://www.youtube.com/watch?v=ytXM05PVcFU)
+- 🎥 [React Advanced London 2022 - Day 1](https://www.youtube.com/watch?v=1x7mI_xuVVo)
+- 🧵 [Lottie vs Rive](https://twitter.com/guidorosso/status/1582086637328031745)
+- 🐦 [Zustand code in a tweet](https://twitter.com/dai_shi/status/1583082766081531905)
+- 🔗 [ReactPlay](https://reactplay.io/)
 
 <SubscribeFormEmbed />
 
@@ -126,16 +121,16 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
-- [Some rumors going around about Expo SDK 47](https://twitter.com/tsapeta/status/1582831949030522881)
-- [Reassure documentation](https://callstack.github.io/reassure/)
-- [The new architecture is here… what now? 3.0](https://twitter.com/Kelset/status/1583416697741975552)
-- [React-Native performance brenchmarks](https://twitter.com/almouro/status/1584628478963777537)
-- [create-react-native-library 0.25 - Kotlin Turbomodule template](https://twitter.com/satya164/status/1583462129235263490)
-- [Expo Router 0.0.31](https://twitter.com/Baconbrix/status/1582875434567409664)
-- [Expo Router 0.0.33](https://twitter.com/Baconbrix/status/1584289284713947136)
-- [Expo Docs Updates - new Flipper plugin integration guide](https://twitter.com/amanhimself/status/1583202477469765633)
-- [RNR 249 - A Redux Maintainer’s Thoughts on RTK vs MST](https://reactnativeradio.com/episodes/rnr-249-a-redux-maintainers-thoughts-on-rtk-vs-mst)
-- [Realm JavaScript v11: A Step Forward for React Native — Hermes Support, Realm React, Flipper, and Much More](https://www.mongodb.com/developer/products/realm/realm-javascript-v11-react-native/)
+- 🤫 [Some rumors going around about Expo SDK 47](https://twitter.com/tsapeta/status/1582831949030522881)
+- 🗣 [The new architecture is here… what now? 3.0](https://twitter.com/Kelset/status/1583416697741975552)
+- 📈 [React-Native performance brenchmarks](https://twitter.com/almouro/status/1584628478963777537)
+- 📖 [Reassure documentation](https://callstack.github.io/reassure/): nouveau site Docusaurus en ligne 🤗
+- 📖 [Expo Docs Updates - new Flipper plugin integration guide](https://twitter.com/amanhimself/status/1583202477469765633)
+- 🎙️ [RNR 249 - A Redux Maintainer’s Thoughts on RTK vs MST](https://reactnativeradio.com/episodes/rnr-249-a-redux-maintainers-thoughts-on-rtk-vs-mst)
+- 📦 [create-react-native-library 0.25 - Kotlin Turbomodule template](https://twitter.com/satya164/status/1583462129235263490)
+- 📦 [Expo Router 0.0.31](https://twitter.com/Baconbrix/status/1582875434567409664)
+- 📦 [Expo Router 0.0.33](https://twitter.com/Baconbrix/status/1584289284713947136)
+- 📦 [Realm JavaScript v11: A Step Forward for React Native — Hermes Support, Realm React, Flipper, and Much More](https://www.mongodb.com/developer/products/realm/realm-javascript-v11-react-native/)
 
 ---
 
