--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
@@ -74,7 +74,7 @@ https://twitter.com/brad_frost/status/1583463259478188033
 
 https://twitter.com/ryanflorence/status/1582835729360572416
 
-
+https://twitter.com/dan_abramov/status/1584835028986793984
 
 - 📖 [New beta doc - cloneElement](https://twitter.com/dan_abramov/status/1582814754426433537)
 - 📡 [React Cache API Pull-Request](https://github.com/facebook/react/pull/25506)
@@ -121,6 +121,7 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
+- 🎥 [Headspace Player - “Can it be done in React Native?”](https://www.youtube.com/watch?v=pErnuAx5GjE)
 - 🤫 [Some rumors going around about Expo SDK 47](https://twitter.com/tsapeta/status/1582831949030522881)
 - 🗣 [The new architecture is here… what now? 3.0](https://twitter.com/Kelset/status/1583416697741975552)
 - 📈 [React-Native performance brenchmarks](https://twitter.com/almouro/status/1584628478963777537)
